--- a/ProDATA/ConfigProyecto/App.config
+++ b/ProDATA/ConfigProyecto/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="ConfigProyecto.Properties.Settings.ProdataConnectionString"
+            connectionString="Data Source=HUNOPWR1000;Initial Catalog=Prodata;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
